--- a/public/css/admin_reports.css
+++ b/public/css/admin_reports.css
@@ -1,105 +1,105 @@
 body{
-    min-height: 100%;
-    position: relative;
+    min-height: 100% !important;
+    position: relative !important;
     
 }
 .customer_cards_title{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif !important;
+    font-weight: bold !important;
 }
 .body{
-    min-height: 70vh;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    min-height: 70vh !important;
+    font-family: Georgia, 'Times New Roman', Times, serif !important;
 }
 .banner-container{
-    align-items: center;
-    font-size: 30px;
-    background-size: cover;
+    align-items: center !important;
+    font-size: 30px !important;
+    background-size: cover !important;
 }
 .read {
-    background-color:#f2f3f4; 
-    border:1px solid #dcdcdc;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    padding: 5px;
-    margin: 7px;
+    background-color:#f2f3f4 !important; 
+    border:1px solid #dcdcdc !important;
+    font-family: Georgia, 'Times New Roman', Times, serif !important;
+    padding: 5px !important;
+    margin: 7px !important;
 }
 .banner{
-    background-color: #F7f7f7;
-    height: max-content;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background-color: #F7f7f7 !important;
+    height: max-content !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
 }
 
 .banner-container .banner .image{
-    flex:1 1 250px;
-    padding: 35px;
-    text-align: left;
-    margin-bottom: 50px;
+    flex:1 1 250px !important;
+    padding: 35px !important;
+    text-align: left !important;
+    margin-bottom: 50px !important;
 }
 
 .banner-container .banner .image img{
-    width: clamp(80%, 4vw, 90%);
+    width: clamp(80%, 4vw, 90%) !important;
 }
 
 .banner-container .banner .text{
-    flex:1 1 250px;
-    padding: clamp(60px, 4vw, 10%);
-    text-align: left;
-    align-items: center;
-    justify-content: center;
+    flex:1 1 250px !important;
+    padding: clamp(60px, 4vw, 10%) !important;
+    text-align: left !important;
+    align-items: center !important;
+    justify-content: center !important;
 }
 
 
 .text h1{
-    color: #1A5184;
-    font-weight:bolder;
-    margin: 7%;
-    font-size: clamp(30px, 4vw, 50px);
+    color: #1A5184 !important;
+    font-weight:bolder !important;
+    margin: 7% !important;
+    font-size: clamp(30px, 4vw, 50px) !important;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 .banner-container .banner .text p{
-    text-align: left;
-    margin: 7%;
-    font-size: clamp(15px, 2vw, 30px);
+    text-align: left !important;
+    margin: 7% !important;
+    font-size: clamp(15px, 2vw, 30px) !important;
 }
 
 @media (max-width:750px){
     .banner-container .banner .image{
-        display: none;
+        display: none !important;
     }
 
     .text h1 p{
-        text-align: center;
+        text-align: center !important;
     }
 
     .p{
-        text-align: center;
+        text-align: center !important;
     }
     .h1{
-        text-align: center;
+        text-align: center !important;
     }
 
     .card-img{
-        height: 265px;
-        object-fit:fill;
-        border-radius: 0.75rem;
+        height: 265px !important;
+        object-fit:fill !important;
+        border-radius: 0.75rem !important;
         
     }
 }
 
 .card{
-    margin: 10px;
-    background-color: #FCFCFC;
-    background-clip: border-box;
-    border: 3px solid #98d1ff;
-    border-radius: 0.75rem;
-    max-width: 540px;
+    margin: 10px !important;
+    background-color: #FCFCFC !important;
+    background-clip: border-box !important;
+    border: 3px solid #98d1ff !important;
+    border-radius: 0.75rem !important;
+    max-width: 540px !important;
 }
 
 .card-body{
-    align-content: space-between;
+    align-content: space-between !important;
 }
 
 .pricing{
@@ -111,74 +111,74 @@ body{
 }
 
 .price{
-    font-weight:bolder;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight:bolder !important;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
 
 .starts{
-    font-size: small;
+    font-size: small !important;
 }
 
 .price{
-    font-size: 30px;
+    font-size: 30px !important;
 }
 .btn-align-left{
-    align-items: flex-end;
+    align-items: flex-end !important;
 }
 
 .row{
-    justify-content: space-between;
-    margin-right: 0;
-    margin-left: 0;
+    justify-content: space-between !important;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
 }
 
 .col{
-    justify-content: end;
+    justify-content: end !important;
 }
 
 .card-img{
-    height: 265px;
-    object-fit:fill;
-    border-radius: 0.75rem;
+    height: 265px !important;
+    object-fit:fill !important;
+    border-radius: 0.75rem !important;
     
 }
 
 .card-img-top{
-    object-fit:fill;
-    border-radius: 0.75rem;
+    object-fit:fill !important;
+    border-radius: 0.75rem !important;
 }
 
 .col-lg-3 .col-md-5{
-    padding-right: 0px;
-    padding-left: 0px;
+    padding-right: 0px !important;
+    padding-left: 0px !important;
 }
 
 
 .head{
-    align-items: center;
+    align-items: center !important;
 
 }
 
 .service_title{
-    padding: 20px;
+    padding: 20px !important;
 }
 
 .customer_search_con{
-    padding: 20px;
+    padding: 20px !important;
 }
 
 .customer_search_field {
-    width: 97%;
-    height: 40px;
-    border-radius: 20px; 
-    font-size: 15px;
-    text-indent: 10px;
-    border: none;
-    background-color: #DAE1EC;
+    width: 97% !important;
+    height: 40px !important;
+    border-radius: 20px !important; 
+    font-size: 15px !important;
+    text-indent: 10px !important;
+    border: none !important;
+    background-color: #DAE1EC !important;
 }
 
 .customer_services_modal_content {
-    border-radius: 15px;
+    border-radius: 15px !important;
     
 }
 
@@ -186,168 +186,168 @@ body{
 .customer_services_broom_2_5_img,
 .customer_trans_broom_2_1_img,
 .customer_trans_his_broom_2_1_img {
-    width: 80px;
-    height: 90px;
-    margin-right: 5px; 
-    background-color: #F6A06F;  
-    border-radius: 10px; 
+    width: 80px !important;
+    height: 90px !important;
+    margin-right: 5px !important; 
+    background-color: #F6A06F !important;  
+    border-radius: 10px !important; 
 }
 
 .five_stars_img {
-    width: 120px;
-    height: 50px;
+    width: 120px !important;
+    height: 50px !important;
 }
 
 .mobile-spacer{
-    display: hidden;
+    display: hidden !important;
 }
 
 
 
 @media (max-width:800px){
     .card{
-        margin: 10px 20px;
+        margin: 10px 20px !important;
     }
     .mobile-spacer{
-        display: block;
-        height: 80px;
+        display: block !important;
+        height: 80px !important;
     }
     .price1, .book {
-        width: 50%;
+        width: 50% !important;
     }
     .customer_services_modal_content{
-        width: 100%;
-        border-radius: 0%;
+        width: 100% !important;
+        border-radius: 0% !important;
     }
     .customer_services_modal_con{
-        margin: auto;
-        top: 50%;
-        left: 48.1%;
-        max-width: 100%;
-        background-color: #FFFFFF;
-        border-radius: 20px;
-        box-shadow: 10px;
-        padding: 10px;
+        margin: auto !important;
+        top: 50% !important;
+        left: 48.1% !important;
+        max-width: 100% !important;
+        background-color: #FFFFFF !important;
+        border-radius: 20px !important;
+        box-shadow: 10px !important;
+        padding: 10px !important;
     }
     .modal-dialog {
-        max-width: 100%;
-        margin: 0;
+        max-width: 100% !important;
+        margin: 0 !important;
     }
 }
 
 .book_now_btn, .confirm_btn {
-    background-color: #397fa5;
-    border: #219EBC;
-    color: white;
-    font-weight: bold;
-    border-radius: 5px; 
+    background-color: #397fa5 !important;
+    border: #219EBC !important;
+    color: white !important;
+    font-weight: bold !important;
+    border-radius: 5px !important; 
 }
 
 .btn-primary{
-    background-color: #F6A06F;
-    border: #F6A06F;
-    color: #2C1112;
-    border-radius: 5px;
+    background-color: #F6A06F !important;
+    border: #F6A06F !important;
+    color: #2C1112 !important;
+    border-radius: 5px !important;
 }
 
 .btn-primary:hover{
-    background-color: #ffc7a7;
-    border: black;
-    color: black;
-    border-radius: 5px;
-    transition-duration: 0.4s;
+    background-color: #ffc7a7 !important;
+    border: black !important;
+    color: black !important;
+    border-radius: 5px !important;
+    transition-duration: 0.4s !important;
 }
 
 .customer_trans_status,
 .customer_trans_his_status {
     
-    margin-top: 5px;
-    font-size: 18px;
-    font-style: italic;
-    font-weight: 600;
-    color: #178ac9;
-    text-align: right;
+    margin-top: 5px !important;
+    font-size: 18px !important;
+    font-style: italic !important;
+    font-weight: 600 !important;
+    color: #178ac9 !important;
+    text-align: right !important;
 }
 
 .service_title_trans{
-    font-size: 19px;
-    font-weight: bold;
+    font-size: 19px !important;
+    font-weight: bold !important;
 }
 .customer_trans_modal_title{
-    font-weight: bold;
+    font-weight: bold !important;
 }
 .card-body{
-    align-content: space-between;
+    align-content: space-between !important;
 }
 
 .customer_services_modal{
-    width: 100%;
-    margin: 0;
-    align-items: center;
+    width: 100% !important;
+    margin: 0 !important;
+    align-items: center !important;
 }
 
 @media (min-width:801px) {
     .customer_services_modal_con{
-        position: absolute;
-        top: 50%;
-        left: 48.1%;
-        margin-right: auto;
-        margin-left: auto;
-        transform: translate(-50%, -50%);
-        background-color: #fff;
-        max-width: 60%;
-        padding: 20px;
-        border-radius: 20px;
-        box-shadow: 0px 0px 10px 0px rgb(63, 63, 63);
-        width: 100%;
+        position: absolute !important;
+        top: 50% !important;
+        left: 48.1% !important;
+        margin-right: auto !important;
+        margin-left: auto !important;
+        transform: translate(-50%, -50%) !important;
+        background-color: #fff !important;
+        max-width: 60% !important;
+        padding: 20px !important;
+        border-radius: 20px !important;
+        box-shadow: 0px 0px 10px 0px rgb(63, 63, 63) !important;
+        width: 100% !important;
     }
     .modal-dialog {
-        max-width: 80%;
-        margin: 1.75rem auto;
+        max-width: 80% !important;
+        margin: 1.75rem auto !important;
     }
 }
 
 
 .modal{
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 .customer_services_description, .customer_package_list{
-    text-align: justify;
-    list-style-type:none;
+    text-align: justify !important;
+    list-style-type:none !important;
 }
 
 .customer_package_pricing{
-    margin: 0%;
+    margin: 0% !important;
 }
 
 .confirm_btn:hover{
-    background-color: #6ef184;
-    border: black;
-    color: black;
-    border-radius: 5px;
-    transition-duration: 0.4s;
-    font-weight: 500;
+    background-color: #6ef184 !important;
+    border: black !important;
+    color: black !important;
+    border-radius: 5px !important;
+    transition-duration: 0.4s !important;
+    font-weight: 500 !important;
 }
 
 .cancel_btn:hover{
-    background-color: #f17d6e;
-    border: black;
-    color: black;
-    border-radius: 5px;
-    transition-duration: 0.4s;
-    font-weight: 500;
+    background-color: #f17d6e !important;
+    border: black !important;
+    color: black !important;
+    border-radius: 5px !important;
+    transition-duration: 0.4s !important;
+    font-weight: 500 !important;
 }
 
 .pricing{
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-right: -15px !important;
+    margin-left: -15px !important;
 }
 
 .place{
-    align-content: space-between;
-    padding: 10px;
+    align-content: space-between !important;
+    padding: 10px !important;
 }
 
 .form-check{}
@@ -355,38 +355,38 @@ body{
 
 @media (max-width:750px){
     .banner-container .banner .image{
-        display: none;
+        display: none !important;
     }
 
     .text h1 p{
-        text-align: center;
+        text-align: center !important;
     }
 
     .p{
-        text-align: center;
+        text-align: center !important;
     }
     .h1{
-        text-align: center;
+        text-align: center !important;
     }
 
     .card-img{
-        height: 265px;
-        object-fit:fill;
-        border-radius: 0.75rem;
+        height: 265px !important;
+        object-fit:fill !important;
+        border-radius: 0.75rem !important;
         
     }
     .modal-dialog{
-        margin: 0;
+        margin: 0 !important;
     }
     .customer_services_modal_con{
-        margin: auto;
-        top: 50%;
-        left: 48.1%;
-        max-width: 100%;
-        background-color: #FFFFFF;
-        border-radius: 20px;
-        box-shadow: 10px;
-        padding: 10px;
+        margin: auto !important;
+        top: 50% !important;
+        left: 48.1% !important;
+        max-width: 100% !important;
+        background-color: #FFFFFF !important;
+        border-radius: 20px !important;
+        box-shadow: 10px !important;
+        padding: 10px !important;
     }
 }
 
@@ -394,33 +394,33 @@ body{
 
 @media (max-width: 325px){
     .price{
-        font-size: 25px;
+        font-size: 25px !important;
     }
 }
 
 .footer {
-    margin-top: 30px;
-    background-color: #061835;
-    margin:0 auto;
-    width:100%;
-    height:auto;
-    overflow:hidden;
-    position: relative;
-    bottom: 0px;
-    padding: .75%;
-    color: white;
+    margin-top: 30px !important;
+    background-color: #061835 !important;
+    margin:0 auto !important;
+    width:100% !important;
+    height:auto !important;
+    overflow:hidden !important;
+    position: relative !important;
+    bottom: 0px !important;
+    padding: .75% !important;
+    color: white !important;
 }
 
 .card-footer:last-child {
-    border-radius: 0px 0px 0.75rem 0.75rem; 
+    border-radius: 0px 0px 0.75rem 0.75rem !important; 
 }
 
 .card-header {
-    border-radius: 0.75rem 0.75rem 0px 0px; 
+    border-radius: 0.75rem 0.75rem 0px 0px !important; 
 }
 
 
 .card-header, .card-footer{
-    background-color:#daf1fd;
+    background-color:#daf1fd !important;
     
 }
